--- a/public/notes.html
+++ b/public/notes.html
@@ -34,13 +34,15 @@
           </div>
         </div>
         <div class="col-8">
-          <input
-            class="note-title"
-            placeholder="Note Title"
-            maxlength="28"
-            type="text"
-          />
-          <textarea class="note-textarea" placeholder="Note Text"></textarea>
+          <form method="POST">
+            <input
+              class="note-title"
+              placeholder="Note Title"
+              maxlength="28"
+              type="text"
+            />
+            <textarea class="note-textarea" placeholder="Note Text"></textarea>
+          </form>
         </div>
       </div>
     </div>
